# lista_tarefas

./: CMakeLists.txt  GestorTarefas.cpp  GestorTarefas.h  README.md  ServicoTarefas.cpp  ServicoTarefas.h  Tarefa.cpp  Tarefa.h  Util.cpp  Util.h  main.cpp  tarefas.json  vcpkg.json
